--- a/WeatherApp/View/Base.lproj/Main.storyboard
+++ b/WeatherApp/View/Base.lproj/Main.storyboard
@@ -25,18 +25,27 @@
                                             <rect key="frame" x="0.0" y="0.0" width="393" height="278"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="sun.max.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="QTi-qN-X9w">
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="sun.max.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="QTi-qN-X9w">
                                                     <rect key="frame" x="76" y="0.0" width="240" height="128"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tZx-Gi-Wn6">
-                                                    <rect key="frame" x="175" y="147" width="42" height="21"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tZx-Gi-Wn6">
+                                                    <rect key="frame" x="175.66666666666666" y="147" width="42" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="21" id="MSi-h7-m56"/>
+                                                    </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstItem="tZx-Gi-Wn6" firstAttribute="top" secondItem="QTi-qN-X9w" secondAttribute="bottom" constant="19" id="7YR-dL-Ki4"/>
+                                                <constraint firstItem="QTi-qN-X9w" firstAttribute="top" secondItem="rtR-jM-nwF" secondAttribute="topMargin" constant="-11" id="JIv-zm-qgg"/>
+                                                <constraint firstItem="QTi-qN-X9w" firstAttribute="centerX" secondItem="rtR-jM-nwF" secondAttribute="centerX" id="Lvb-WN-AMu"/>
+                                                <constraint firstItem="QTi-qN-X9w" firstAttribute="leading" secondItem="rtR-jM-nwF" secondAttribute="leadingMargin" constant="56" id="THJ-zN-T2v"/>
+                                                <constraint firstItem="QTi-qN-X9w" firstAttribute="centerX" secondItem="tZx-Gi-Wn6" secondAttribute="centerX" id="X3u-in-2lc"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="tZx-Gi-Wn6" secondAttribute="bottom" constant="99" id="y91-Fj-3Sp"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="OXE-0x-rGW">
@@ -78,7 +87,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cityCell" rowHeight="111" id="VaS-gT-VT4" customClass="CityTableViewCell" customModule="WeatherApp" customModuleProvider="target">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cityCell" rowHeight="111" id="VaS-gT-VT4">
                                 <rect key="frame" x="0.0" y="50" width="393" height="111"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="VaS-gT-VT4" id="fjO-H7-blK">
@@ -133,9 +142,7 @@
                     </tableView>
                     <navigationItem key="navigationItem" title="Weather" id="UPx-V2-iEi">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="GuN-kf-fz1">
-                            <connections>
-                                <action selector="addButtonTapped:" destination="0uV-9U-fz8" id="2gp-b5-Rlm"/>
-                            </connections>
+                            <color key="tintColor" systemColor="labelColor"/>
                         </barButtonItem>
                     </navigationItem>
                 </tableViewController>
@@ -148,10 +155,10 @@
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="feS-SK-4Np" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" barStyle="black" id="66l-Kh-VXP">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="66l-Kh-VXP">
                         <rect key="frame" x="0.0" y="59" width="393" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <color key="barTintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="barTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <textAttributes key="titleTextAttributes">
                             <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </textAttributes>
@@ -172,6 +179,9 @@
     <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
     <resources>
         <image name="sun.max.fill" catalog="system" width="128" height="125"/>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
